# eco-cli

./: .gitignore  LICENSE  MANIFEST.in  README.md  b.py  budget.py  eco.py  eco_utils.py  setup.cfg  setup.py
eco/: __main__.py  eco_scrapper.py  eco_utils.py
eco/tables/: appdata.json
src/: __init__.py  eco_utils.py  main.py
src/utils/: ANSI_escape_codes.py
tables/: daily.csv  income.csv  savings.csv  spending.csv  spendings.csv
utils/: ANSI_escape_codes.py
