[metadata]
name = martinezpl
version = 1.3.2
author = Marcin Szleszynski
author_email = mszlesz@gmail.com
description = A CLI tool for personal finance management
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martinezpl/eco-cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    eco = eco.__main__:main
